samples/_failures_safe/1761097551_11ce53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d57bebf.c: In function ‘main’:
./samples/SAFE/__tmp_8d57bebf.c:147:5: error: expected identifier or ‘(’ at end of input
  147 |     for (size_t
      |     ^~~
./samples/SAFE/__tmp_8d57bebf.c:147:5: error: expected declaration or statement at end of input
